      to the root of the installation, instead of absolute. The tag
      script is always supposed to be executed under chroot. (CNY-2523)
    * When resuming the update after the execution of a critical update,
      Conary will now use the original file replacement flags. This
      corrects file conflict errors in a migrate when a critical update
      was present. (CNY-2513)

Changes in 1.2.17:
  o Build Changes:
    * Java dependencies for classes that are not dependency-complete
      are now automatically disabled. To re-enable them, the missing
      dependencies should be added as buildRequires. (CNY-2175)

  o Bug Fixes:
    * A minor bug in the display of the password prompt has been fixed.
      (CNY-2497)
    * Slow SQL queries used to remove unused entries from the
      TroveFiles table and TroveTroves table have been rewritten to
      make some queries faster with repositories implemented with a
      sqlite database. (CNY-2515)
    * When using the tagScript argument with the client's applyUpdateJob
      call, the paths to group scripts to be executed are stored relative
      to the root of the installation, instead of absolute. The tag
      script is always supposed to be executed under chroot. (CNY-2523)
    * When using the tagScript argument with the client's applyUpdateJob
      call, the paths to group scripts to be executed are stored relative
      to the root of the installation, instead of absolute. The tag
      script is always supposed to be executed under chroot. (CNY-2523)

  o Other changes:
    * The file EULA_Conary.txt has been added to clarify that Conary
      is available under two licenses, and to state the conditions
      under which the two licenses apply.

Changes in 1.2.16:
  o Client Changes:
    * The rollback API now raises a RollbackError instead of returning
      non-zero on errors. (CNY-1643)

  o Build Changes:
    * When file conflicts occur while cooking groups, the deps that