@@ -7,6 +7,11 @@ Changes in @NEW@:
       Conary will now use the original file replacement flags. This
       corrects file conflict errors in a migrate when a critical update
       was present. (CNY-2513)
+    * The lazy file cache was using /proc/self/fd as a method of
+      determining the number of open file descriptors for the current
+      process. However, under certain circumstances the directory is not
+      readable. The lazy file cache now uses a poll(2)-based technique.
+      (CNY-2536)
 
 Changes in 1.2.17:
   o Build Changes:
